vid overlap issues

--- a/htdocs/assets/css/startpage.css
+++ b/htdocs/assets/css/startpage.css
@@ -101,6 +101,7 @@ body{
   top: -2px;
   -webkit-box-shadow: 0px 2px 12px rgba(0,0,0,0.7);
   -moz-box-shadow: 0px 2px 12px rgba(0,0,0,0.7);
+  transition: all 200ms ease-out ;
 
  }
 
@@ -126,7 +127,7 @@ body{
  background: #272822;
  text-align: left;
  color: #fff;
- height: 230px;
+ height: 270px;
  box-shadow: inset 0px 5px 10px 0px rgba(0,0,0,0.3);
 
 }
@@ -139,7 +140,7 @@ body{
 
 .code-left{
   width: 494px;
-  height: 200px;
+  height: 240px;
   display: inline-block;
   float: left;
   padding: 30px 0px 0px 105px;
@@ -158,7 +159,7 @@ body{
 
 .code-right{
   width: 444px;
-  height: 200px;
+  height: 240px;
   display: inline-block;
   float: left;
   padding: 30px 0px 0px 80px;
@@ -172,19 +173,43 @@ body{
 ****************************/
 
 #segment-example-app{
+  margin: auto;
+  width: 1000px;
+  position: relative;
+  top: -72px;
+
+}
+
+
+#segment-example-app-wrap{
  background: #ffffff;
  text-align: center;
  color: #145068;
- height: 676px;
+ height: 576px;
+ overflow:hidden;
 
 }
 
 .example-app{
-  background: url(../images/exmpl-app.svg) no-repeat center center;
+   /* background: url(../images/exmpl-app.svg) no-repeat center center; */
   height: 100%;
+  width: 1000px;
+  margin: auto;
   text-align: center;
   color: white;
-  overflow: hidden;
+
+}
+
+.phone-top{
+  background: url(../images/phone-top.svg) no-repeat center center;
+  height: 72px;
+  width: 325px;
+  position: relative;
+  top: 5px;
+  left: 648px;
+  text-align: center;
+  color: white;
+}
 }
 
 /****************************
@@ -255,11 +280,12 @@ body{
 
 .segment-label{
   position: relative;
-  top: 55px;
-  right: 400px;
+  top: 25px;
+  right: 397px;
   color: #22C9F1;
   font-size: 23px;
-  font-family: 'Quicksand', sans-serif; font-weight: 400;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 400;
   opacity: 1;
 
 }
@@ -348,6 +374,84 @@ body{
 }
 
 
+/****************************
+* TILE TEST
+****************************/
 
 
 
+.tiles-back{
+  background-color: #017EA8;
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 20px
+
+}
+
+.tile{
+  background-color: #E0E0E0;
+  display: block;
+  width: 240px;
+  height: 150px;
+}
+
+.tile-circ{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  color: #017EA8;
+  background-color: #E0E0E0;
+  display: block;
+  width: 46px;
+  margin: auto;
+  position: relative;
+  top: -128px;
+  border-radius: 100px 100px 100px 100px;
+  height: 46px;
+  border-style: solid;
+  border-width: 2px 2px 2px 2px;
+  text-align: center;
+  line-height: 38px;
+  padding: 10px 5px 0px 5px;
+
+
+}
+
+.tile-header{
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 500;
+  color: #017EA8;
+  background-color: #E0E0E0;
+  display: block;
+  width: 228px;
+  height: 30px;
+  border-style: solid;
+  border-width: 2px 2px 2px 0px;
+  padding: 10px 0px 0px 10px;
+
+}
+
+.tile-boxes{
+
+
+  display: block;
+  position: relative;
+  top: 0px;
+  width: 240px;
+  height: 98px;
+}
+
+.tile-box{
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 500;
+  color: #017EA8;
+  background-color: #E0E0E0;
+  display: inline-block;
+  float: left;
+  top: 0px;
+  width: 108px;
+  height: 98px;
+  border-style: solid;
+  border-width: 0px 2px 0px 0px;
+  padding: 10px 0px 0px 10px;
+}
